--- a/manipulation.tex
+++ b/manipulation.tex
@@ -126,7 +126,6 @@ Une fois les dérivées partielles effectuées:
     \Delta v = \frac{1}{t_{obscu}}\cdot \Delta s + \frac{S}{t_{osbcu}^2}\cdot \Delta t
 \end{equation}
 
-
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Résultats}
@@ -278,14 +277,13 @@ On observe dans un premier temps, que les valeurs théoriques sont remarquableme
 
 À partir de ces graphiques, on peut constater que la loi qui décrit le mouvement n'est pas linéaire, elle est d'un ordre supérieur. Sur le graphique suivant c'est la position au carré qui a été présentée, toujours en fonction du temps. Les doites étant désormais linéaires, on peut raisonnablement supposer qu'elle est quadratique.
 
-\begin{figure}
+\begin{figure}[h]
     \caption[Graphique $position^2$ MRUA]{Graphique $position^2$ MRUA}
     \centering
-    \includegraphics[height=21em]{MRUAdistancet2.png}
+    \includegraphics[height=17em]{MRUAdistancet2.png}
 \end{figure}
 
-Les résultats nous montrent que la loi qui décrit le mouvement d'un mobile soumis à une accélération constante est effectivement quadratique et que la constante devant l'accélération vaut effectivement $\frac{1}{2}$.
-
+\newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Collision}
 Pour cette manipulation, il a fallu commencer par enlever la barrière infrarouge et installer la caméra CCD.
@@ -322,27 +320,30 @@ Les chariots ont étés mesurés avec la balance de laboratoire pour connaître 
 
 L'un des chariots était alors fixé sur rail grâce à un morceau de papier plié afin qu'il ne se mette pas en mouvement. Ensuite l'autre chariot était lancé depuis l'extrémité de captage de la caméra, à l'aide d'un taquet fixé au bout d'un ressort qui vient percuter le mobile. Le ressort à toujours été tiré au maximum afin d'appliquer la plus grande force possible. Les chariots se percutent alors, le bout de papier servant à immobiliser le premier chariot tombe et le libère.
 
+\newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Résultats}
 
-L'arrêt un peu plus tard étant dû au choc contre la barrière au bout du rail.
+Il est à noter que la capture se poursuivant parfois plusieurs secondes après le choc le rebond contre les protections empêchants les chariots de basculer aux extrêmités du rail ont parfois été enregistrées provoquant des données erronées à la fin des séries de valeurs et des graphes.
 
 \begin{figure}[h]
     \caption[Graphique position Choc élastique 400g-200g]{Graphique position Choc élastique 400g-200g}
     \centering
-    \includegraphics[height=15em]{Data/400-200ela01.png}
+    \includegraphics[height=19em]{Data/400-200ela01.png}
 \end{figure}
 
 \begin{figure}[h]
     \caption[Graphique vitesse Choc élastique 400g-200g]{Graphique vitesse Choc élastique 400g-200g}
     \centering
-    \includegraphics[height=15em]{Data/400-200ela02v.png}
+    \includegraphics[height=19em]{Data/400-200ela02v.png}
 \end{figure}
+
+\newpage
 
 \begin{figure}[h]
     \caption[Graphique accélération Choc élastique 400g-200g]{Graphique accélération Choc élastique 400g-200g}
     \centering
-    \includegraphics[height=15em]{Data/400-200ela02a.png}
+    \includegraphics[height=19em]{Data/400-200ela02a.png}
 \end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -351,66 +352,78 @@ Sur le graphique de position, on voit très clairement le moment du choc et la v
 Sur celui de la vitesse c'est un peu plus complexe. Pour le moment il est juste possible d'affirmer que suite aux chocs les deux mobiles restent en mouvement mais pas de manière équivalente.
 Sur ce dernier graphique, il est assez explicite que la valeur de l'accélération de chaque chariot est largement différente. Il serait tentant de supposer que l'une vaut la moitié de l'autre. On peut aussi observer la poussée initiale donnée par le lanceur.
 
+\newpage
+
+\begin{figure}[h]
+    \caption[Graphique position Choc élastique 200g-200g]{Graphique position Choc inélastique 200g-200g}
+    \centering
+    \includegraphics[height=19em]{Data/200-200ela01.png}
+\end{figure}
+
+\begin{figure}[h]
+    \caption[Graphique vitesse Choc élastique 200g-200g]{Graphique vitesse Choc inélastique 200g-200g}
+    \centering
+    \includegraphics[height=19em]{Data/200-200ela02v.png}
+\end{figure}
+
+\newpage
+
+\begin{figure}[h]
+    \caption[Graphique accélération Choc élastique 200g-200g]{Graphique accélération Choc inélastique 200g-200g}
+    \centering
+    \includegraphics[height=19em]{Data/200-200ela02a.png}
+\end{figure}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\paragraph{Observation préliminaires}
+
+Comme on peut le constater sur les graphiques de vitesse et de position, tout le mouvement d'un chariot est transféré à l'autre au moment du choc. Le premier mobile s'arrêtant alors sur place et le second partant avec la vitesse du premier. L'accéleration est de valeur égale est opposé pour chacun des chariots.
+
+\newpage
+
 \begin{figure}[h]
     \caption[Graphique position Choc inélastique 400g-200g]{Graphique position Choc inélastique 400g-200g}
     \centering
-    \includegraphics[height=15em]{Data/400-200ela01.png}
+    \includegraphics[height=19em]{Data/400-200inela01.png}
 \end{figure}
 
 \begin{figure}[h]
     \caption[Graphique vitesse Choc inélastique 400g-200g]{Graphique vitesse Choc inélastique 400g-200g}
     \centering
-    \includegraphics[height=15em]{Data/400-200ela02v.png}
+    \includegraphics[height=19em]{Data/400-200inela02v.png}
 \end{figure}
+
+\newpage
 
 \begin{figure}[h]
     \caption[Graphique accélération Choc inélastique 400g-200g]{Graphique accélération Choc inélastique 400g-200g}
     \centering
-    \includegraphics[height=15em]{Data/400-200ela02a.png}
+    \includegraphics[height=19em]{Data/400-200inela02a.png}
 \end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \paragraph{Observation préliminaires}
 
-Comme on peut le constater sur les graphiques de vitesse et de position, tout le mouvement d'un chariot est transféré à l'autre au moment du choc. Le premier mobile s'arrêtant alors sur place et le second partant avec la vitesse du premier.
-
-\begin{figure}[h]
-    \caption[Graphique position Choc inélastique 400g-200g]{Graphique position Choc inélastique 400g-200g}
-    \centering
-    \includegraphics[height=15em]{Data/400-200inela01.png}
-\end{figure}
-
-\begin{figure}[h]
-    \caption[Graphique vitesse Choc inélastique 400g-200g]{Graphique vitesse Choc inélastique 400g-200g}
-    \centering
-    \includegraphics[height=15em]{Data/400-200inela02v.png}
-\end{figure}
-
-\begin{figure}[h]
-    \caption[Graphique accélération Choc inélastique 400g-200g]{Graphique accélération Choc inélastique 400g-200g}
-    \centering
-    \includegraphics[height=15em]{Data/400-200inela02a.png}
-\end{figure}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\paragraph{Observation préliminaires}
+\newpage
 
 \begin{figure}[h]
     \caption[Graphique position Choc inélastique 200g-200g]{Graphique position Choc inélastique 200g-200g}
     \centering
-    \includegraphics[height=15em]{Data/200-200inela01.png}
+    \includegraphics[height=19em]{Data/200-200inela01.png}
 \end{figure}
 
 \begin{figure}[h]
     \caption[Graphique vitesse Choc inélastique 200g-200g]{Graphique vitesse Choc inélastique 200g-200g}
     \centering
-    \includegraphics[height=15em]{Data/200-200inela02v.png}
+    \includegraphics[height=19em]{Data/200-200inela02v.png}
 \end{figure}
+
+\newpage
 
 \begin{figure}[h]
     \caption[Graphique accélération Choc inélastique 200g-200g]{Graphique accélération Choc inélastique 200g-200g}
     \centering
-    \includegraphics[height=15em]{Data/200-200inela02a.png}
+    \includegraphics[height=19em]{Data/200-200inela02a.png}
 \end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
