--- a/theorie.tex
+++ b/theorie.tex
@@ -21,12 +21,12 @@ En reliant ces deux équations et en supposant que seule la force de gravitation
 \subsection{MRUA}
 Le MRUA est, comme son nom l'indique, un Mouvement Rectiligne Uniformément Accéléré. C'est en effet un mouvement relativement simple qui peut se décrire en général par trois équations horaires, celles de la position de la vitesse et celle de l'accélération:
 \begin{equation}
-\begin{align}
-    \label{eqmouv}
-    & x(t) = \frac{1}{2} \cdot a\cdot t^2 + v_0 \cdot t + x_0 \\
-    & v(t) = a \cdot t + v_0 \\
-    & a(t) = a
-\end{align}
+    \begin{align}
+	\label{eqmouv}
+	& x(t) = \frac{1}{2} \cdot a\cdot t^2 + v_0 \cdot t + x_0 \\
+	& v(t) = a \cdot t + v_0 \\
+	& a(t) = a
+    \end{align}
 \end{equation}
 
 \subsection{Quantité de mouvement}
@@ -37,7 +37,7 @@ Par définition, la loi de la quantité de mouvement relie une grandeur scalaire
 \end{equation}
 On peut prendre une définition plus large de cette notion en l'appliquant à un système de points matériels, ce qui nous donne:
 \begin{equation}
-    p_{tot} = p_1 + p_2 + p_3 +... = m_1 \cdot v_1 + m_2 \cdot v_2 + m_3 \cdot v_3 +...
+    p_{tot} = p_1 + p_2 + p_3 +\cdots = m_1 \cdot v_1 + m_2 \cdot v_2 + m_3 \cdot v_3 +\cdots
 \end{equation}
 Il est toutefois plus intéressant de savoir que cette quantité de mouvement, en l'absence de forces externes, se conserve durant l'évolution du système et notamment durant les collisions parfaitement élastiques:
 \begin{equation}
