--- a/manipulation.tex
+++ b/manipulation.tex
@@ -12,6 +12,12 @@ Pour cette expérience, le matériel suivant a été utilisé:
     \item Balance de laboratoire (Précision au mg)
 \end{itemize}
 
+\begin{figure}[h]
+    \caption[Photo rail à coussin d'air]{Photo rail à coussin d'air}
+    \centering
+    \includegraphics[height=20em]{Rail.jpg}
+\end{figure}
+
 Tout d'abord, il y avait 6 masses de 100g numérotées à disposition pour la suite des travaux pratiques. On a commencé par les mesurer afin de choisir les plus précises. Voici les mesures obtenues:
 \begin{table}[h]
     \centering
@@ -32,21 +38,40 @@ Tout d'abord, il y avait 6 masses de 100g numérotées à disposition pour la su
 
 Il y a plusieurs choses auxquelles il a fallu être attentif concernant le matériel de cette expérience.\\
 Tout d'abord, il a fallu mettre à plat le rail à coussin d'air pour être certain que les chariots n'iraient pas naturellement d'un côté ou de l'autre par simple effet de la gravitation.\\
- Il a également fallu être prudent concernant la puissance de ventilation du rail. Si cette dernière est trop puissante, le chariot a tendance à flotter un peu trop haut et à taper le rail, causant le ralentissement de ce dernier. Par contre, si l'air arrive avec un débit trop faible, le mobile frotte sur le rail et est donc ralentit, ce qui engendre des résultats faussés.
+Il a également fallu être prudent concernant la puissance de ventilation du rail. Si cette dernière est trop puissante, le chariot a tendance à flotter un peu trop haut et à taper le rail, causant le ralentissement de ce dernier. Par contre, si l'air arrive avec un débit trop faible, le mobile frotte sur le rail et est donc ralentit, ce qui engendre des résultats faussés.
 À chaque changement de masse, la ventilation a donc été réglée pour éviter ces effets indésirables.\\
 La masse de 5g a, elle aussi, été mesurée par nos soins, donnant la valeur suivante : $5.01 \pm 01g$
 
+\begin{figure}[h]
+    \caption[Photo Électro-aimant]{Photo Électro-aimant}
+    \centering
+    \includegraphics[height=20em]{Electroaimant.jpg}
+\end{figure}
+
+
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Méthode}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsubsection{MRUA}
+\subsection{MRUA}
 Pour cette première partie de la manipulation, une masse de $5.01 \pm 0.01g$ était attachée par une ficelle à un chariot dont la masse variait par pas de 100g. Le chariot était retenu par un électro-aimant déclenchable à distance par le biais d'un boîtier Cassy. Une languette de largeur déterminée passait alors devant une barrière infrarouge, le temps de passage de cette languette permettant ensuite de déterminer la vitesse instantanée du mobile. Une fois l'électro-aimant éteint par le biais du logiciel, tout passage devant la barrière infrarouge était enregistré.
 La longueur de la ficelle a été choisie de manière à ce que la masse de 5g qui y était suspendue ne touche pas le sol même lorsque le chariot était en bout de course garantissant ainsi que la force appliquée au chariot restait constante.
 Un souci relevé lors de cette partie de la manipulation concernait l'électro-aimant dont la fiabilité laissait parfois à désirer et qui ne laissait pas toujours partir le chariot. Les mesures durant lesquelles le départ du mobile n'était pas franc ont été refaites.
 
-Pour les mesures du chariot pesant 400g, les masses 1, 2 et 6 ont été utilisées. Pour 300g, les masses 1 et 2. Pour 100g, uniquement la masse numéro 1.
+Pour les mesures du chariot pesant 400g, les masses 1, 2 et 6 ont été utilisées. Pour 300g, les masses 1 et 2. Pour 100g, uniquement la masse numéro 1. La masse du chariot a été ajustée avec des poids très léger afin d'être le plus proche possible de 100g (dans les marges d'erreurs) Avec la mesure exactes des masses faite précedemment, les masses exactes de chaque chariot est donc:
+
+\begin{table}[ht]
+    \centering
+    \caption[Masses chariots]{Masses chariots}
+    \begin{tabular}{|l|l|}
+	\hline
+	Masse voulue [g] & Masse réelle \\
+	\hline
+	100g & $100.00\pm 0.01g$ \\
+	200g & $200.23\pm 0.01g$ \\
+	300g & $300.26\pm 0.01g$ \\
+	400g & $400.54\pm 0.01g$ \\
+	\hline
+    \end{tabular}
+\end{table}
 
 La longueur de la course du chariot a varié de 0.1 à 0.8m. La mesure de la vitesse instantanée a été obtenue en mesurant le temps que mettait une languette de $0.005 \pm 0.001m$ fixée sur le chariot.
 % \begin{equation}
@@ -285,13 +310,30 @@ On observe dans un premier temps, que les valeurs théoriques sont remarquableme
 
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsubsection{Collision}
+\subsection{Collision}
 Pour cette manipulation, il a fallu commencer par enlever la barrière infrarouge et installer la caméra CCD.
-La mise en place et le calibrage de cet appareil de mesure se sont avérés relativement longs. Il a d'abord fallu trouver la distance idéale pour capturer le déplacement des chariots tout le long du rail, adapter l'angle de prise de vu pour obtenir une intensité homogène lors du déplacement des chariots et choisir la puissance des LEDs installées sur le capteur. Une difficulté supplémentaire rencontrée lors de cette phase de mise au point étant la partie métallique de la poulie à l'extrêmité droite du rail qui était considérée comme un chariot et contribuait à créer du bruit lors de la capture de données. Une modification mineure de l'angle de la caméra a réglé ce problème.
+La mise en place et le calibrage de cet appareil de mesure se sont avérés relativement longs. Il a d'abord fallu trouver la distance idéale pour capturer le déplacement des chariots tout le long du rail, adapter l'angle de prise de vu pour obtenir une intensité homogène lors du déplacement des chariots et choisir la puissance des LEDs installées sur le capteur.
+Une difficulté supplémentaire rencontrée lors de cette phase de mise au point étant la partie métallique de la poulie à l'extrêmité droite du rail qui était considérée comme un chariot et contribuait à créer du bruit lors de la capture de données. Une modification mineure de l'angle de la caméra a réglé ce problème.
 La caméra a ensuite été calibrée avec le logiciel VidéoCom Mouvements afin de pouvoir représenter le rail sur une échelle physique en mètres et non en pixels tel que la caméra l'interprète naturellement.\\
 Les deux chariots ont ensuite été équipés des poids de 100g mesurés précedemment, ainsi que de ressorts à leurs extrémités afin d'optimiser l'élasticité du choc et dissiper le moins possible d'énergie lors du choc. \\
 
-L'expérience s'est ensuite déroulée en deux parties, la première où les chocs étaient complétement élastiques et les deux chariots équipés de pare-chocs métalliques. La seconde où l'un des chariots était muni d'une aiguille pouvant se planter dans la gomme dont l'autre chariot était équipé.
+L'expérience s'est ensuite déroulée en deux parties, la première où les chocs étaient complétement élastiques et les deux chariots équipés de pare-chocs métalliques.
+
+\begin{figure}[h]
+    \caption[Photo]{Photo chocs élastiques}
+    \centering
+    \includegraphics[height=20em]{Elastique.jpg}
+\end{figure}
+
+\newpage
+
+La seconde où l'un des chariots était muni d'une aiguille pouvant se planter dans la gomme dont l'autre chariot était équipé.
+
+\begin{figure}[h]
+    \caption[Photo]{Photo chocs inélastiques}
+    \centering
+    \includegraphics[height=20em]{Inelastique.jpg}
+\end{figure}
 
 Pour chacune des deux phases, deux combinaisons de masses ont étés testées. La première fois, le chariot de gauche pesait 400g et celui de droite 200g. Lors de la seconde itération les deux chariots possédaient une masse identique de 200g.
 
@@ -404,6 +446,8 @@ Comme on peut le constater sur les graphiques de vitesse et de position, tout le
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \paragraph{Observation préliminaires}
 
+Pour les graphes de position et de vitesse, un nouveau phénomène entre en compte par rapport au chocs élastiques. Comme prévu les deux mobiles restent accolés l'un à l'autre mais leur vitesse semble se stabiliser quelque part entre les vitesses initiales de chacun des chariots pris à part. Celui possédant une masse plus importante ressentant une accéleration plus faible que l'autre.
+
 \newpage
 
 \begin{figure}[h]
@@ -430,6 +474,96 @@ Comme on peut le constater sur les graphiques de vitesse et de position, tout le
 \paragraph{Observation préliminaires}
 On peut très clairement voir les deux chariots se coller et poursuivre leur trajectoire ensemble.
 À la différence du cas élastique, on observe ici 'à l'oeil' que la vitesse finale des deux mobiles réunis est la moyenne de chacun d'entre eux avant la collision.
+
+Afin de faire une analyse un peu plus précise, les mesures exactes récoltées depuis la caméra CCD et jointe en annexe ont été utilisée. Il faut pour le moment juste noter que les moyennes après collisions sont les suivantes:
+
+\begin{table}[h]
+    \centering
+    \begin{tabular}{|l|l|l|}
+	\hline
+	Choc & Masses & $v_1$[m/s] \\
+	\hline
+	Élastique & 400g-200g & 0.148   \\
+	Élastique & 200g-200g & 0.229   \\
+	Inélastique & 400g-200g & 0.149 \\
+	Inélastique & 200g-200g & 0.225 \\
+	\hline
+    \end{tabular}
+\end{table}
+
+Pour calculer des valeurs théoriques, les formules~\eqref{ela} et~\eqref{inela} ont été utilisées donnant dans notre cas particulier où $v_2$ = 0
+
+\begin{align}
+    & m_1 v_1 = m_1 v_1' + m_2 v_2'\\
+    & \frac{1}{2} m_1 v_1^2 = \frac{1}{2}m_1 v_1^2 + \frac{1}{2} m_2 v_2^2
+\end{align}
+
+\begin{align}
+    & v_1' = \frac{( m_1 - m_2)\cdot v_1}{m_1 + m_2}
+    & v_2' = \frac{2\cdot m_1 v_1}{m_1 + m_2}
+\end{align}
+
+et dans le cas inélastique:
+
+\begin{equation}
+    m_1 \cdot v_1 = (m_1 + m_2) \cdot v_3' \rightarrow v_3' = \frac{m_1}{m_1+m_2}\cdot v_1
+\end{equation}
+
+A.N. élastique 200g-200g:
+
+\begin{equation}
+    v_3' = \frac{400.12\cdot 0.1485}{400.12 + 200.06} = 0.099
+\end{equation}
+
+La valeur mesurée est de 0.098[m/s], l'erreur relative est donc:
+
+\begin{equation}
+    |\frac{0.098-0.099}{0.099}|\cdot 100 = 1\%
+\end{equation}
+
+
+A.N. elastique 400g-200g:
+
+\begin{align}
+    & v_1' = \frac{(399.68-200.16)\cdot 0.1478}{399.68 + 200.16} = 0.0482[m/s]\\
+    & v_2' = \frac{2\cdot 399.68\cdot 0.1478}{399.68 + 200.16} = 0.1969[m/s]
+\end{align}
+
+Les valeurs mesurées sont de $v_1' = 0.0483 [m/s]$, $v_2' = 0.1889[m/s]$, l'erreur relative est donc:
+
+\begin{align}
+    & v_1' : |\frac{0.0483-0.0492}{0.0493}|\cdot 100 = 1.8\%\\
+    & v_2' : |\frac{0.1889-0.1969}{0.1969}|\cdot 100 = 4.1\%
+\end{align}
+
+
+A.N. inélastique 200g-200g:
+
+\begin{align}
+    & v_1' = \frac{(200-200.16)\cdot 0.2268}{200 + 200.16} = 0[m/s]\\
+    & v_2' = \frac{2\cdot 200\cdot 0.2288}{200 + 200.16} = 0.2285[m/s]
+\end{align}
+
+Les valeurs mesurées sont de $v_1' = 0 [m/s]$, $v_2' = 0.2238[m/s]$, l'erreur relative est donc:
+
+\begin{align}
+    & v_1' : 0\%\\
+    & v_2' : |\frac{0.2238-0.2285}{0.2285}|\cdot 100 = 2.05\%
+\end{align}
+
+A.N. inélastique 400g-200g:
+
+\begin{equation}
+    v_3' = \frac{400.12\cdot 0.1485}{400.12 + 200.06} = 0.0990[m/s]
+\end{equation}
+
+La valeur mesurée est de 0.098[m/s], l'erreur relative est donc:
+
+\begin{equation}
+    |\frac{0.0983-0.0990}{0.0990}|\cdot 100 = 0.7\%
+\end{equation}
+
+De ces calculs d'incertitudes on peut tirer la conclusion que les mesures faites lors des collisions ont été très précises et ont tendance à l'être plus si les masses mises en jeu sont plus grandes.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Conclusion}
