--- a/theorie.tex
+++ b/theorie.tex
@@ -20,14 +20,12 @@ En reliant ces deux équations et en supposant que seule la force de gravitation
 
 \subsection{MRUA}
 Le MRUA est, comme son nom l'indique, un Mouvement Rectiligne Uniformément Accéléré. C'est en effet un mouvement relativement simple qui peut se décrire en général par trois équations horaires, celles de la position de la vitesse et celle de l'accélération:
-\begin{equation}
-    \begin{align}
-	\label{eqmouv}
-	& x(t) = \frac{1}{2} \cdot a\cdot t^2 + v_0 \cdot t + x_0 \\
-	& v(t) = a \cdot t + v_0 \\
-	& a(t) = a
-    \end{align}
-\end{equation}
+\begin{align}
+    \label{eqmouv}
+    & x(t) = \frac{1}{2} \cdot a\cdot t^2 + v_0 \cdot t + x_0 \\
+    & v(t) = a \cdot t + v_0 \\
+    & a(t) = a
+\end{align}
 
 \subsection{Quantité de mouvement}
 La quantité de mouvement, et particulièrement sa conservation, sont des notions très intéressantes dans le cadre de la mécanique classique. Dans ce rapport, nous allons l'utiliser pour caractériser le mouvement résultant d'un choc entre deux objets.
@@ -41,10 +39,12 @@ On peut prendre une définition plus large de cette notion en l'appliquant à un
 \end{equation}
 Il est toutefois plus intéressant de savoir que cette quantité de mouvement, en l'absence de forces externes, se conserve durant l'évolution du système et notamment durant les collisions parfaitement élastiques:
 \begin{equation}
+    \label{ela}
     p_{tot} = m_1 \cdot v_1 + m_2 \cdot v_2 = m_1 \cdot v_3 + m_2 \cdot v_4
 \end{equation}
 et inélastiques:
 \begin{equation}
+    \label{inela}
     p_{tot} = m_1 \cdot v_1 + m_2 \cdot v_2 = (m_1 + m_2) \cdot v_3
 \end{equation}
 Il est toutefois à noter que la quantité d'énérgie cinétique elle n'est pas conservée lors des chocs inélastiques.
